--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -18,7 +18,7 @@
           </button>
       </form>
       <div class="icons-container">
-        <a href="{{ site.baseurl }}/advertise/" class="right-item" title='פרסום באתר - החל מ-50 ש"ח'>
+        <a href="{{ site.baseurl }}/advertise/" class="right-item" title='פרסום באתר'>
           <i class="fas fa-bullhorn"></i>
         </a>
         <a class="feedback-button feedback-mail-link" data-email="mesader.singelim@gmail.com" data-subject="משוב לאתר שיר-בוט" data-body="שלום,
