--- a/docs/_layouts/monthly_archive.html
+++ b/docs/_layouts/monthly_archive.html
@@ -6,12 +6,7 @@ layout: default
   <a href="{{ site.baseurl }}/archive/"
      class="hngn-link-button"
      title="חזרה לאינדקס הארכיון">
-    <i class="fas fa-archive"></i> ארכיון המוזיקה
-  </a>
-  <a href="{{ site.baseurl }}/new-songs/"
-     class="hngn-link-button"
-     title="מעבר לדף השירים החדשים">
-    <i class="fas fa-fire"></i> שירים חדשים
+    <i class="fas fa-archive"></i> כל הארכיון
   </a>
 </div>
 <div id="resultsTable" class="custom-table">
