--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -303,7 +303,7 @@ a.column-title-link:hover {
   margin-top: 30px;
   position: relative;
 }
-.features-container {
+.promo-container {
   display: flex;
   gap: 0;
   justify-content: center;
@@ -311,12 +311,12 @@ a.column-title-link:hover {
   background-color: #fafafa;
   border-radius: var(--border-radius-main);
   box-shadow: var(--card-shadow);
-  margin-top: 40px;
   margin-bottom: 30px;
   flex-wrap: wrap;
   overflow: hidden;
+  border: 1px solid var(--border-color);
 }
-.features-container {
+.promo-container {
   gap: 1px;
   background-color: var(--border-color);
 }
