--- a/docs/_layouts/monthly_archive.html
+++ b/docs/_layouts/monthly_archive.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+{% include breadcrumb.html %}
 <h2 class="page-main-title">{{ page.album_name }}</h2>
 <div style="text-align: center; margin-bottom: 20px; display: flex; justify-content: center; gap: 10px;">
   <a href="{{ site.baseurl }}/archive/"
